--- a/index.html
+++ b/index.html
@@ -3,17 +3,20 @@
   <head>
     <meta charset="UTF-8">
     <!-- https://developer.mozilla.org/en-US/docs/Web/HTTP/CSP -->
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'">
-    <meta http-equiv="X-Content-Security-Policy" content="default-src 'self'; script-src 'self'">
     <title>Hello World!</title>
+    <link rel="stylesheet" href="style/style.css">
   </head>
   <body>
-    <h1>Hello World!</h1>
-    We are using Node.js <span id="node-version"></span>,
-    Chromium <span id="chrome-version"></span>,
-    and Electron <span id="electron-version"></span>.
-
+    <section class="section">
+      <div>
+        <h1>Hello World!</h1>
+        <button id="btn1">发送信息给主线线程</button>
+        <button id="btn2">F12</button>
+        <webview id="webview" src="https://www.zhihu.com/" preload="./script/web-view.js"></webview>
+      </div>
+    </section>
     <!-- You can also require other files to run in this process -->
     <script src="./renderer.js"></script>
+    <script src="./script/menu.js"></script>
   </body>
 </html>
